# sparte

./: .babelrc  .bandit  .buildpacks  .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .slugignore  .sqlfluff  Aptfile  CHANGELOG.md  CONFIG.md  Dockerfile  Dockerfile.frontend  Dockerfile.k8s  ENV.md  HOW_TO_MEP.md  Makefile  Pipfile  Procfile  README.md  _scalingo.json  babel.config.js  config_load_ocsge.json  docker-compose.yml  flake8  jest.config.js  models.temp.py  package-lock.json  package.json  pyproject.toml  pytest.ini  required_parameters.json  requirements.txt  scalingo.json  sonar-project.properties  tests.py  tsconfig.json  webpack.config.js
.astro/: config.yaml
.github/: release.yml
airflow/: .env.example  .gitignore  Dockerfile  README.md  dbt_profile.yml  packages.txt  requirements.txt  webserver_config.py
app_parameter/: admin.py  apps.py  models.py
brevo/: apps.py  connectors.py  tasks.py
carto/: README.md  admin.py  apps.py  forms.py  load.py  models.py  urls.py  views.py
config/: celery.py  context_processors.py  jupyter_notebook_config.json  jupyter_notebook_config.py  middlewares.py  settings.py  storages.py  urls.py  utils.py  views.py  wsgi.py
crisp/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
croisements/: 00_synthese.md  01_population_demographie.md  02_menages_familles.md  03_logement.md  04_csp_activite.md  05_mobilite_deplacement.md  06_scolarite_diplomes.md  07_emploi_lieu_travail.md  08_salaires.md  09_etablissements.md  10_tourisme.md  11_equipements_services.md  12_electeurs.md  README.md
dbbackup/: apps.py  storages.py
diagnostic/: apps.py
diagnostic_word/: Template.py  admin.py  apps.py  data_sources.py  models.py  renderers.py  template-rapport-complet.docx  tests.py  urls.py  views.py  word_template_fixture.json
django_docx_template/: apps.py  data_sources.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
docs/: dat.md  documentation_metier.md  documentation_technique.md
documentation/: apps.py  urls.py  views.py
export/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
frontend/: Dockerfile  tsconfig.json  webpack.config.js
highchart_export_serveur/: Dockerfile  README.md
highcharts/: apps.py  charts.py
(+4061 files in other folders)
