[tool.poetry]
name = "SPARTE"
version = "0.1.0"
description = "SPARTE est un projet open source qui vise à accompagner les collectivités à réduire l'artificialisation de leur sol"
authors = ["Swann <swann.bouviermuller@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
